Fix experience section overlapping

--- a/styles.css
+++ b/styles.css
@@ -20,14 +20,13 @@ body {
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 1;
   top: 0;
   left: 0;
   background-color: #111;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
-  z-index: 2;
+  z-index: 3;
 }
 
 .sidenav a {
@@ -54,7 +53,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
 }
 
 .top {
